--- a/Nivel 2/Seguimiento con mi proyecto/miEjemplo-ado.net/winform-app/winform-app.csproj
+++ b/Nivel 2/Seguimiento con mi proyecto/miEjemplo-ado.net/winform-app/winform-app.csproj
@@ -46,20 +46,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Disco.cs" />
-    <Compile Include="DiscoNegocio.cs" />
-    <Compile Include="Estilo.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmAltaDisco.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAltaDisco.Designer.cs">
+      <DependentUpon>frmAltaDisco.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TipoEdicion.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAltaDisco.resx">
+      <DependentUpon>frmAltaDisco.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -82,6 +87,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\dominio\dominio.csproj">
+      <Project>{73ba7642-809d-44f9-9acd-eb0aabcb0888}</Project>
+      <Name>dominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\negocio\negocio.csproj">
+      <Project>{5da302e7-2a53-4b40-9c04-99c11ca5d205}</Project>
+      <Name>negocio</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
